--- a/content/themes/horace/home.hbs
+++ b/content/themes/horace/home.hbs
@@ -22,8 +22,8 @@
 				{{/user}}
 			{{/get}}
 
-			<h2 class="hero-title">{{t "Headline"}}</h2>
-			<p class="hero-description">{{t "Lead"}}</p>
+			<h2 class="hero-title">{{t "Web3 Technology In Depth"}}</h2>
+			<p class="hero-description">{{t "This is the first blog on web3 technology in depth. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network."}}</p>
 
 			{{!-- The tag below includes the social links list - partials/social-links.hbs --}}
 			{{> "social-links"}}
