--- a/content/themes/horace/partials/social-links.hbs
+++ b/content/themes/horace/partials/social-links.hbs
@@ -6,5 +6,5 @@
 	{{#if @blog.twitter}}
 	<a href="{{twitter_url}}" target="_blank" rel="noopener">{{> "icons/twitter"}}</a>
 	{{/if}}
-	<a href="https://github.com/YoonjaeYoo" target="_blank" rel="noopener">{{> "icons/github"}}</a>
+	<a href="https://github.com/web3-guru" target="_blank" rel="noopener">{{> "icons/github"}}</a>
 </p><!-- .social-links -->
