--- a/content/themes/horace/partials/widget-about.hbs
+++ b/content/themes/horace/partials/widget-about.hbs
@@ -1,5 +1,5 @@
 {{!-- Widget to display the about info --}}
 <section class="widget widget-text">
 	<h2 class="widget-title">{{t "About {blogtitle}" blogtitle=@blog.title}}</h2>
-	<p>{{{t "Blog Description"}}}</p>
+	<p>{{{t "web3.guru covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network. Explore it yourself. Feedback, questions, or ideas? Drop us a line via email."}}}</p>
 </section><!-- .widget -->
