--- a/content/themes/horace/home.hbs
+++ b/content/themes/horace/home.hbs
@@ -23,7 +23,7 @@
 			{{/get}}
 
 			<h2 class="hero-title">{{t "Web3 Technology In Depth"}}</h2>
-			<p class="hero-description">{{t "This is the first blog on web3 technology in depth. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network."}}</p>
+			<p class="hero-description">{{t "Everything you need to know about web3 technology. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network."}}</p>
 
 			{{!-- The tag below includes the social links list - partials/social-links.hbs --}}
 			{{> "social-links"}}
