Change font from Rockwell to Arvo

--- a/content/themes/horace/assets/css/style.css
+++ b/content/themes/horace/assets/css/style.css
@@ -197,7 +197,7 @@ table {
  * ----------------------------------------------------------------------------
  */
 html {
-  font-family: "Rockwell", sans-serif;
+  font-family: "Arvo", sans-serif;
   font-size: 112.5%; }
 
 body {
