--- a/content/themes/horace/default.hbs
+++ b/content/themes/horace/default.hbs
@@ -12,7 +12,7 @@
 	{{ghost_head}}
 
     {{!-- Styles --}}
-    <link href="https://fonts.googleapis.com/css?family=Rockwell:400,400i,700,700i" rel="stylesheet" type=text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i" rel="stylesheet" type=text/css" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
 </head>
 <body class="{{body_class}}">
