--- a/content/themes/horace/error.hbs
+++ b/content/themes/horace/error.hbs
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	{{!-- Styles --}}
-	<link href="https://fonts.googleapis.com/css?family=Rockwell:400,400i,700,700i" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i" rel="stylesheet" />
 	<link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
 </head>
 <body class="error-template">
