--- a/content/themes/horace/assets/css/style.css
+++ b/content/themes/horace/assets/css/style.css
@@ -18,6 +18,24 @@
  * 7. Site Footer
  * 8. Media Queries
 */
+@font-face {
+  font-family: 'Rockwell';
+  font-style: italic;
+  font-weight: 400;
+  src: local("Rockwell MT Italic"), local("RockwellMT-Italic"), url(/assets/fonts/RockwellMT-Italic.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+@font-face {
+  font-family: 'Rockwell';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Rockwell MT"), local("RockwellMT"), url(/assets/fonts/RockwellMT.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+@font-face {
+  font-family: 'Rockwell';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Rockwell MT Bold"), local("RockwellMT-Bold"), url(/assets/fonts/RockwellMT-Bold.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 /**
  * 0. Reset
  * normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css
@@ -197,7 +215,7 @@ table {
  * ----------------------------------------------------------------------------
  */
 html {
-  font-family: "Arvo", sans-serif;
+  font-family: "Rockwell", sans-serif;
   font-size: 112.5%; }
 
 body {
