--- a/content/themes/horace/home.hbs
+++ b/content/themes/horace/home.hbs
@@ -22,7 +22,7 @@
 				{{/user}}
 			{{/get}}
 
-			<h2 class="hero-title">{{t "Web3 Technology In Depth"}}</h2>
+			<h2 class="hero-title">{{t "web3 Technology In Depth"}}</h2>
 			<p class="hero-description">{{t "Everything you need to know about web3 technology. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network."}}</p>
 
 			{{!-- The tag below includes the social links list - partials/social-links.hbs --}}
