--- a/content/themes/horace/partials/comments.hbs
+++ b/content/themes/horace/partials/comments.hbs
@@ -18,7 +18,7 @@
 	};
 	(function() {
 		var d = document, s = d.createElement('script');
-		s.src = 'https://my_disqus_shortname.disqus.com/embed.js';
+		s.src = 'https://web3-guru.disqus.com/embed.js';
 		s.setAttribute('data-timestamp', +new Date());
 		(d.head || d.body).appendChild(s);
 	})();
